gccida/c3/init_temp_slots
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_temp_slots/src/function.c:1809:12: error: expected expression
*( _OWORD *)&cfun->x_temp_slots = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_temp_slots/src/function.c:1809:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&cfun->x_temp_slots = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_temp_slots/src/obj/function.o] Error 1
